src/views/App/index.module.scss
.article {
    background: white;
    width: 100%;
    max-width: 600px;
    border-radius: 20px;
    padding: 20px 55px 30px;

    @media (max-width: 480px) {
        padding: 15px 20px 20px;
        border-radius: 12px;
    }


    &Title {
       font-size: 40px;
       margin-bottom: 0.3em;
       text-align: center;
    }


    @media (max-width: 480px) {
        font-size: 28px;
    }
    &Text{
        text-align: center;
    }
}

